# pksmart-web

./: README.md  pyproject.toml  requirements.txt
web/: Documentation.py  home.py  pksmart.py  runpksmart.py  runsingle.py
web/pages/: 01-PKSmart Single SMILES.py  02-PKSmart Batch SMILES.py  PKSmart Batch SMILES.py  PKSmart Single SMILES.py
