[tool.poetry]
name = "pksmart"
version = "0.1.0"
description = "PKSmart is an open-source app framework built specifically for predicting human and animal PK parameters."
authors = ["Manas Mahale <manas.mahale2002@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
streamlit = "^1.39.0"
rdkit = "^2024.3.5"
mordred = "^1.2.0"
dimorphite-dl = "^1.3.2"
scikit-learn = "1.1.1"
watchdog = "^5.0.3"
bokeh = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
